neat and fixed mobile wrap on index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,7 @@ main {
     width: 100vw;
 
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -11,9 +11,14 @@ main {
 
 
 .container {
+    height: 120px;
     width: 300px;
 
     display: flex;
     flex-flow: column nowrap;
-    align-items: right;
+    justify-content: space-between;
+}
+
+.logohead {
+    font-size: 1.33rem;
 }
