--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,11 +28,6 @@ p {
     text-decoration: line-through;
 }
 
-.logohead {
-    margin: -5px 0;
-    padding: 0;
-}
-
 .black {
     color: black;
 }
@@ -56,7 +51,6 @@ p {
       "BLED" 0,
       "SCAN" -30;
 
-    letter-spacing: -10px;
     color: #0088FF;
 
     padding: 5px 0;
